WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59878
Fix OwnPtr strict issues in windows build
https://bugs.webkit.org/show_bug.cgi?id=59878
Summary
Fix OwnPtr strict issues in windows build
Patrick R. Gansterer
Reported
2011-05-01 10:10:12 PDT
see patch
Attachments
Patch
(14.62 KB, patch)
2011-05-01 10:12 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2011-05-01 10:12:39 PDT
Created
attachment 91827
[details]
Patch
WebKit Review Bot
Comment 2
2011-05-01 10:14:10 PDT
Attachment 91827
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/win/CursorWin.cpp:85: Use 0 instead of NULL. [readability/null] [5] Source/WebKit/win/WebView.cpp:1053: Missing space after , [whitespace/comma] [3] Total errors found: 2 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Barth
Comment 3
2011-05-01 10:20:39 PDT
Thanks!!
WebKit Commit Bot
Comment 4
2011-05-01 10:47:43 PDT
Comment on
attachment 91827
[details]
Patch Clearing flags on attachment: 91827 Committed
r85420
: <
http://trac.webkit.org/changeset/85420
>
WebKit Commit Bot
Comment 5
2011-05-01 10:47:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug