Source/WebCore/platform/graphics/win/WKCAImageQueue.cpp
@@ -30,6 +30,7 @@
 
 #include <CoreFoundation/CoreFoundation.h>
 #include <WebKitSystemInterface/WebKitSystemInterface.h>
+#include <wtf/PassOwnPtr.h>
 #include <wtf/RetainPtr.h>
 
 namespace WebCore {
@@ -53,13 +54,13 @@ static void WKCAImageQueueRelease(CAImageQueueRef iq)
 }
 
 WKCAImageQueue::WKCAImageQueue(uint32_t width, uint32_t height, uint32_t capacity)
-    : m_private(new WKCAImageQueuePrivate())
+    : m_private(adoptPtr(new WKCAImageQueuePrivate()))
 {
     m_private->m_imageQueue.adoptCF(wkCAImageQueueCreate(width, height, capacity));
 }
 
 WKCAImageQueue::WKCAImageQueue(const WKCAImageQueue& o)
-    : m_private(new WKCAImageQueuePrivate())
+    : m_private(adoptPtr(new WKCAImageQueuePrivate()))
 {
     m_private->m_imageQueue = o.m_private->m_imageQueue;
 }
